syntax = "proto3";

option go_package = ".;gcn";

message Node {
  string id = 1;
  repeated float features = 2;
}

message Edge {
  string source_id = 1;
  string target_id = 2;
}

message GraphData {
  repeated Node nodes = 1;
  repeated Edge edges = 2;
}

message ModelParams {
  int32 input_dims = 1;
  int32 hidden_dims = 2;
  int32 output_dims = 3;
}

message GCNRequest {
  GraphData graph = 1;
  ModelParams params = 2;
}

message GCNResult {
  map<string, float> node_scores = 1;
}

service GCNService {
  rpc ProcessGCN (GCNRequest) returns (GCNResult);
}